# pretty_poly

./: README.md  pyproject.toml  run_tests.py  test_deleted_ascii.py
.github/workflows/: make-examples.yml  poetry-publish-prerelease.yml
docs/: index.html
examples/: ascii_edge_cases.md  make.py  right_12.py
pretty_poly/: __init__.py  abstract.py  ascii.py  display_result.py  image.py  png.py  svg.py  tiling.py
tests/: test_abstract.py  test_ascii.py  test_deleted_ascii.py  test_hard_ascii.py  test_image.py  test_png.py  test_svg.py
