[tool.poetry]
name = "pretty_poly"
version = "0.2.0-alpha.0"
description = "Display polyominos and polyomino tilings in various pretty formats."
authors = ["Jack Grahl <jack.grahl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.scripts]
test = 'run_tests:test'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
