[tool.poetry]
name = "pretty_poly"
version = "0.3.2-alpha.0"
description = "Display polyominos and polyomino tilings in various pretty formats."
readme = "README.md"
authors = ["Jack Grahl <jack.grahl@gmail.com>"]
homepage = "https://github.com/jwg4/pretty_poly"
repository = "https://github.com/jwg4/pretty_poly.git"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pypng = "^0.0.20"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.scripts]
test = 'run_tests:test'
doctest = 'run_tests:run_doctest'
examples = 'examples.make:write_examples'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
